// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedControl renders in light theme 1`] = `
<View
  accessibilityRole="radiogroup"
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "rgba(0, 0, 0, 0.08)",
      "borderRadius": 8,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 2,
      "padding": 3,
    }
  }
  testID="rwy"
>
  <View
    accessibilityLabel="Dry"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 38,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        null,
        {
          "backgroundColor": "#00C2A8",
        },
        null,
      ]
    }
    testID="rwy-dry"
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#001A17",
            "fontFamily": "System",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Dry
    </Text>
  </View>
  <View
    accessibilityLabel="Wet"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 38,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        null,
        null,
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="rwy-wet"
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6B7280",
            "fontFamily": "System",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Wet
    </Text>
  </View>
  <View
    accessibilityLabel="Contaminated"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 38,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        null,
        null,
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="rwy-contaminated"
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6B7280",
            "fontFamily": "System",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Contaminated
    </Text>
  </View>
</View>
`;

exports[`SegmentedControl renders three options with one active in dark theme 1`] = `
<View
  accessibilityRole="radiogroup"
  style={
    {
      "backgroundColor": "#11161F",
      "borderColor": "rgba(255, 255, 255, 0.08)",
      "borderRadius": 8,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 2,
      "padding": 3,
    }
  }
  testID="rwy"
>
  <View
    accessibilityLabel="Dry"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 38,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        null,
        {
          "backgroundColor": "#00C2A8",
        },
        null,
      ]
    }
    testID="rwy-dry"
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#001A17",
            "fontFamily": "System",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Dry
    </Text>
  </View>
  <View
    accessibilityLabel="Wet"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 38,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        null,
        null,
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="rwy-wet"
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Wet
    </Text>
  </View>
  <View
    accessibilityLabel="Contaminated"
    accessibilityRole="radio"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "justifyContent": "center",
          "minHeight": 38,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        null,
        null,
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="rwy-contaminated"
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Contaminated
    </Text>
  </View>
</View>
`;
